<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_anchorGravity="center_horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Deck">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/cards_list"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_vertical|end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:background="@color/white"
                        android:id="@+id/deckName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingHorizontal="30dp"
                        android:text="@string/deck_name_placeholder"
                        android:textSize="24sp" />

                    <Spinner
                        android:id="@+id/spinnerVoice"
                        android:layout_width="match_parent"
                        android:layout_height="48dp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="0"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/menu_button"
                    android:src="@drawable/baseline_menu_64" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="60dp">

                <ImageButton
                    android:id="@+id/addCardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/add_card_button"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/baseline_add_box_64" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>