<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:padding="30dp"
    tools:context=".Card">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp">

        <ImageButton
            android:id="@+id/voiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@color/white"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/baseline_volume_up_64" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/card_term_placeholder"
                android:textAlignment="gravity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:background="@color/white"
                android:gravity="top"
                android:lines="3"
                android:maxLines="3"
                android:minLines="1"
                android:paddingVertical="15dp"
                android:text="@string/card_definition_placeholder"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/card_image"
                android:src="@android:drawable/ic_menu_gallery"
                android:visibility="invisible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>