<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_anchorGravity="center_horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".pocket.Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/cards_list"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:text="@string/pocket_title"
                    android:textSize="24sp" />

                <ImageButton
                    style="@style/Icon"
                    android:id="@+id/menuButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/menu_button"
                    android:padding="8dp"
                    android:src="@drawable/cross" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/decksList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <ImageButton
                style="@style/Icon"
                android:id="@+id/addDeckButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/add_box" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>